Add NFT Checker

--- a/app/templates/assets/scss/clu.scss
+++ b/app/templates/assets/scss/clu.scss
@@ -28,3 +28,24 @@ body::-o-scrollbar-track
     border-radius: 10px;
     background-color: rgb(32, 32, 32);
 }
+
+.thumbnail {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+.thumbnail img {
+position: absolute;
+left: 50%;
+top: 50%;
+height: 100%;
+width: auto;
+-webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+}
+.thumbnail img.portrait {
+width: 100%;
+height: auto;
+  }
