--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,9 +101,14 @@
                     Connect to your Binance Smart Chain (BSC) Wallet and join thousands of others in tracking their rewards<br>
                     Linking your wallet enables lifetime tracking and better reports!
                 </p>
-                <button id="rusty" onclick="sign()" class="button is-rounded is-primary is-outlined">
-                    <strong class="fancyTitle">Sign In With Wallet</strong>
-                </button>
+                <div class="buttons">
+                    <button id="rusty" onclick="sign()" class="button is-rounded is-primary is-outlined">
+                        <strong class="fancyTitle">Sign In With Wallet</strong>
+                    </button>
+                    <a href="/nfts" class="button is-rounded is-info is-outlined">
+                        <strong class="fancyTitle">Check Clu NFTs</strong>
+                    </a>
+                </div>
                 <br><br>
                 <form action='/search' method='GET'>
                     <label class="label" for="search" style="color: #868686">
