--- a/app/templates/nfts.html
+++ b/app/templates/nfts.html
@@ -51,7 +51,7 @@ height: auto;
     <meta property="og:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="og:image"
-        content="https://clucoin.com/static/images/3000.png">
+        content="https://clucoin.com/static/images/clucoin_new_logo.png">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
     <!-- Twitter -->
@@ -61,7 +61,7 @@ height: auto;
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image"
-        content="https://clucoin.com/static/images/3000.png">
+        content="https://clucoin.com/static/images/clucoin_new_logo.png">
     <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="assets/js/gradanim.js"></script>
 </head>
@@ -71,7 +71,7 @@ height: auto;
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://clutrack.io/">
-                    <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
+                    <img src="https://clucoin.com/static/images/clucoin_new_logo.png" style="margin-right: 2%" alt="Logo">
                     CLUTRACK.IO
                 </a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
