--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -45,7 +45,7 @@
     <meta property="og:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="og:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
-    <meta property="og:image" content="https://clucoin.com/static/images/3000.png">
+    <meta property="og:image" content="https://clucoin.com/static/images/clucoin_new_logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -53,7 +53,7 @@
     <meta property="twitter:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
-    <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
+    <meta property="twitter:image" content="https://clucoin.com/static/images/clucoin_new_logo.png">
     <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
 </head>
@@ -65,7 +65,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="https://clutrack.io/">
-                            <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
+                            <img src="https://clucoin.com/static/images/clucoin_new_logo.png" style="margin-right: 2%" alt="Logo">
                             CLUTRACK.io
                         </a>
                     </div>
