--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
     <meta property="og:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="og:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
-    <meta property="og:image" content="https://clucoin.com/static/images/3000.png">
+    <meta property="og:image" content="https://clucoin.com/static/images/clucoin_new_logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -54,7 +54,7 @@
     <meta property="twitter:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
-    <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
+    <meta property="twitter:image" content="https://clucoin.com/static/images/clucoin_new_logo.png">
     <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://clutrack.io/">
-                    <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
+                    <img src="https://clucoin.com/static/images/clucoin_new_logo.png" style="margin-right: 2%" alt="Logo">
                     CLUTRACK.IO
                 </a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
